--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,11 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description" content="DW Oneindia Quiz" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/oi-logo.png" />
+  <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/og-dw-watch-and-wind.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="624" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
