--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,16 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="DW Oneindia Quiz" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/oi-logo.png" />
+  <meta property="og:url" content="https://videos.oneindia.com/dwquiz/" />
   <meta property="og:image" itemprop="image" content="%PUBLIC_URL%/og-dw-watch-and-wind.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="624" />
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@oneindia">
+  <meta name="twitter:creator" content="@oneindia">
+  <meta name="twitter:title" content="DW Oneindia Quiz">
+  <meta name="twitter:description" content="DW Oneindia Quiz">
+  <meta name="twitter:image" content="%PUBLIC_URL%/og-dw-watch-and-wind.jpg">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
