--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
   <meta property="og:image:height" content="624" />
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@oneindia">
-  <meta name="twitter:creator" content="@oneindia">
+  <meta name="twitter:creator" content="oneindia">
   <meta name="twitter:title" content="DW Oneindia Quiz">
   <meta name="twitter:description" content="DW Oneindia Quiz">
-  <meta name="twitter:image" content="%PUBLIC_URL%/og-dw-watch-and-wind.jpg">
+  <meta name="twitter:image" content="https://videos.oneindia.com/dwquiz/og-dw-watch-and-wind.jpg">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
