new design added

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
   <meta name="description" content="DW Oneindia Quiz" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/oi-logo.png" />
   <meta property="og:title" content="DW Oneindia Watch & Win Contest" />
-  <!-- <meta property="og:url" content="https://videos.oneindia.com/dwquiz/" />
+  <meta property="og:url" content="https://videos.oneindia.com/dwquiz/" data-react-helmet="true" />
   <meta property="og:description"
-    content="Enter the lucky draw to win Amazon voucher by answering the question correctly" /> -->
+    content="Enter the lucky draw to win Amazon voucher by answering the question correctly" data-react-helmet="true" />
   <meta property="og:image" itemprop="image" content="https://videos.oneindia.com/dwquiz/og-dw-watch-and-wind.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="624" />
