new design added

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="DW Oneindia Quiz" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/oi-logo.png" />
   <meta property="og:title" content="DW Oneindia Watch & Win Contest" />
+  <link rel="canonical" href="https://videos.oneindia.com/dwquiz/" data-react-helmet="true" />
   <meta property="og:url" content="https://videos.oneindia.com/dwquiz/" data-react-helmet="true" />
   <meta property="og:description"
     content="Enter the lucky draw to win Amazon voucher by answering the question correctly" data-react-helmet="true" />
